--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="operation button" value="*">*</li>
           <li class="button" value="4">4</li>
           <li class="button" value="5">5</li>
-          <li class="button" value="" 6>6</li>
+          <li class="button" value="6" >6</li>
           <li class="operation button" value="-">-</li>
           <li class="button" value="1">1</li>
           <li class="button" value="2">2</li>
