fix opration btns and add btn to screen

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         <ul>
           <li class="operation ac" value="AC">AC</li>
           <li class="operation del" value="DEL">DEL</li>
-          <li class="operation button" value="%">%</li>
-          <li class="operation button" value="/">/</li>
+          <li class="operation button" value="15">%</li>
+          <li class="operation OButton" value="14">/</li>
           <li class="button" value="7">7</li>
           <li class="button" value="8">8</li>
           <li class="button" value="9">9</li>
-          <li class="operation button" value="*">*</li>
+          <li class="operation OButton" value="13">*</li>
           <li class="button" value="4">4</li>
           <li class="button" value="5">5</li>
           <li class="button" value="6" >6</li>
-          <li class="operation button" value="-">-</li>
+          <li class="operation OButton" value="12">-</li>
           <li class="button" value="1">1</li>
           <li class="button" value="2">2</li>
           <li class="button" value="3">3</li>
-          <li class="operation button" value="+">+</li>
+          <li class="operation OButton" value="11">+</li>
           <li class="button" value="0">0</li>
           <li class="button" value="00">00</li>
           <li class="button" value=".">.</li>
