--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
       <div class="boxOfCalculator">
         <input class="output" placeholder="0" />
         <ul>
-          <li class="operation ac" value="AC">AC</li>
-          <li class="operation del" value="DEL">DEL</li>
-          <li class="operation button" value="15">%</li>
-          <li class="operation OButton" value="14">/</li>
+          <li class="operation ac">AC</li>
+          <li class="operation del">DEL</li>
+          <li class="operation" value="15">%</li>
+          <li class="operation" value="14">/</li>
           <li class="button" value="7">7</li>
           <li class="button" value="8">8</li>
           <li class="button" value="9">9</li>
-          <li class="operation OButton" value="13">*</li>
+          <li class="operation" value="13">*</li>
           <li class="button" value="4">4</li>
           <li class="button" value="5">5</li>
           <li class="button" value="6" >6</li>
-          <li class="operation OButton" value="12">-</li>
+          <li class="operation" value="12">-</li>
           <li class="button" value="1">1</li>
           <li class="button" value="2">2</li>
           <li class="button" value="3">3</li>
-          <li class="operation OButton" value="11">+</li>
+          <li class="operation" value="11">+</li>
           <li class="button" value="0">0</li>
           <li class="button" value="00">00</li>
-          <li class="button" value=".">.</li>
-          <li class="operation equal" value="=">=</li>
+          <li class="operation" value="16">.</li>
+          <li class="operation equal">=</li>
         </ul>
       </div>
     </div>
